# taintgrind

./: .gitignore  Dockerfile  Makefile.all.am  Makefile.am  Makefile.in  Makefile.tool.am  README.md  autogen.sh  build_taintgrind.sh  capstone-3.0.4.patch  configure.ac  configure.in  configure_capstone.sh  copy.c  copy.h  d3basics.patch  entrypoint.sh  link_tool_exe_darwin.patch  log2dot.py  make_capstone_options.py  taintgrind  taintgrind.h  tnt_asm.c  tnt_asm.h  tnt_asm_stub.c  tnt_include.h  tnt_main.c  tnt_malloc_wrappers.c  tnt_smt2.c  tnt_strings.h  tnt_structs.h  tnt_syswrap.c  tnt_translate.c
cachegrind/tests/: Makefile.am
callgrind/tests/: Makefile.am
coregrind/: m_libcassert.c  m_libcproc.c  m_machine.c  m_redir.c  m_signals.c  pub_core_aspacemgr.h  pub_core_debuginfo.h  pub_core_libcproc.h  pub_core_mallocfree.h  pub_core_syscall.h  pub_core_trampoline.h  vgdb.c
coregrind/m_coredump/: coredump-amd64-freebsd.c  coredump-elf.c
coregrind/m_debuginfo/: readpdb.c  readstabs.c  storage.c
coregrind/m_sigframe/: sigframe-amd64-freebsd.c
coregrind/m_syswrap/: priv_syswrap-generic.h  priv_types_n_macros.h
coregrind/m_ume/: elf.c
drd/tests/: Makefile.am  pth_detached3.c
getpath/: getpath_fromfd.c
helgrind/: hg_main.c
helgrind/tests/: tc17_sembar.c  tc24_nonzero_sem.c
include/: pub_tool_basics.h  pub_tool_libcsetjmp.h  valgrind.h
include/vki/: vki-amd64-freebsd.h  vki-freebsd.h  vki-machine-types-amd64-freebsd.h
lackey/: Makefile.am
memcheck/: mc_replace_strmem.c
memcheck/tests/: Makefile.am  addressable.c  badjump2.c  memalign2.c  pointer-trace.stderr.exp
memcheck/tests/amd64/: Makefile.am
memcheck/tests/x86/: more_x86_fp.c
mpi/: Makefile.am
none/tests/: map_unaligned.c  mq.c  shell.stderr.exp-freebsd
none/tests/x86/: insn_ssse3.vgtest
perf/: bigcode.c
tests/: Makefile.am  Makefile.in  arch_test.c  checktaint.c  heartbleed.c  memchr.c  memcpy.c  misprint.c  sign16.c  sign32.c  sign64.c  sign8.c  signstdin.c  signstdin2.c  symbolic_maze.c  taint_stdin.c
tools/: log2dot.py  tnt_concolic_search.py  tnt_model_to_input.py  tnt_slice_trace.py  tnt_solve_branches.py  tnt_trace_to_smt.py
valgrind-3.7.0/: FAQ.txt  Makefile.all.am  Makefile.am  Makefile.in  Makefile.tool.am  Makefile.vex.in  README_FREEBSD  autogen.sh  config.h  config.h.in  configure  configure.in  freebsd.supp  valgrind.spec
valgrind-3.7.0/VEX/pub/: libvex_guest_offsets.h  libvex_guest_x86.h
valgrind-3.7.0/autom4te.cache/: output.1  requests  traces.0  traces.1
valgrind-3.7.0/auxprogs/: Makefile.in
valgrind-3.7.0/cachegrind/: Makefile.in
valgrind-3.7.0/cachegrind/tests/: Makefile.in
valgrind-3.7.0/callgrind/: Makefile.in
valgrind-3.7.0/callgrind/tests/: Makefile.in
valgrind-3.7.0/coregrind/: Makefile.am  Makefile.in  launcher-freebsd.c  link_tool_exe_freebsd.in  m_debugger.c  m_debuglog.c  m_libcfile.c  m_libcsetjmp.c  m_libcsignal.c  m_main.c  m_stacktrace.c  m_syscall.c  m_trampoline.S  m_translate.c  m_vki.c  m_vkiscnums.c  pub_core_initimg.h  pub_core_machine.h  pub_core_sigframe.h  vg_preloaded.c
valgrind-3.7.0/coregrind/m_aspacemgr/: aspacemgr-common.c  aspacemgr-linux.c
valgrind-3.7.0/coregrind/m_coredump/: coredump-x86-freebsd.c
valgrind-3.7.0/coregrind/m_debuginfo/: d3basics.c  debuginfo.c  readdwarf.c  readdwarf3.c  readelf.c
valgrind-3.7.0/coregrind/m_dispatch/: dispatch-amd64-freebsd.S  dispatch-x86-freebsd.S
valgrind-3.7.0/coregrind/m_initimg/: initimg-freebsd.c
valgrind-3.7.0/coregrind/m_replacemalloc/: vg_replace_malloc.c
valgrind-3.7.0/coregrind/m_scheduler/: scheduler.c
valgrind-3.7.0/coregrind/m_sigframe/: sigframe-x86-freebsd.c
valgrind-3.7.0/coregrind/m_syswrap/: priv_syswrap-freebsd.h  syscall-amd64-freebsd.S  syscall-x86-freebsd.S  syswrap-amd64-freebsd.c  syswrap-freebsd-variants.c  syswrap-freebsd.c  syswrap-generic.c  syswrap-main.c  syswrap-x86-freebsd.c
valgrind-3.7.0/coregrind/m_ume/: main.c  priv_ume.h
valgrind-3.7.0/docs/: Makefile.in  callgrind_annotate.1  callgrind_control.1  cg_annotate.1  ms_print.1  valgrind.1
valgrind-3.7.0/docs/html/: FAQ.html  QuickStart.html  bbv-manual.html  cg-manual.html  cl-format.html  cl-manual.html  design-impl.html  dh-manual.html  dist.authors.html  dist.html  dist.news.html  dist.readme-developers.html  dist.readme-missing.html  dist.readme-packagers.html  dist.readme.html  drd-manual.html  faq.html  hg-manual.html  index.html  license.gfdl.html  license.gpl.html  licenses.html  lk-manual.html  manual-core-adv.html  manual-core.html  manual-intro.html  manual-writing-tools.html  manual.html  mc-manual.html  ms-manual.html  nl-manual.html  quick-start.html  sg-manual.html  tech-docs.html
valgrind-3.7.0/drd/: Makefile.in  drd_main.c
valgrind-3.7.0/drd/tests/: Makefile.in
valgrind-3.7.0/exp-bbv/: Makefile.in
valgrind-3.7.0/exp-bbv/tests/: Makefile.in
valgrind-3.7.0/exp-dhat/: Makefile.in
valgrind-3.7.0/exp-dhat/tests/: Makefile.in
valgrind-3.7.0/exp-sgcheck/: Makefile.in
valgrind-3.7.0/exp-sgcheck/tests/: Makefile.am  Makefile.in
valgrind-3.7.0/gdbserver_tests/: Makefile.in
valgrind-3.7.0/getpath/: Makefile  getpath_fromaddr.c  gp_README
valgrind-3.7.0/helgrind/: Makefile.in  hg_intercepts.c
valgrind-3.7.0/helgrind/tests/: Makefile.in  tc07_hbl1.c  tc08_hbl2.c  tc11_XCHG.c  tc20_verifywrap.c  tc23_bogus_condwait.c
valgrind-3.7.0/include/: Makefile.am  Makefile.in  pub_tool_basics_asm.h  pub_tool_machine.h  pub_tool_redir.h  pub_tool_vki.h  pub_tool_vkiscnums.h  pub_tool_vkiscnums_asm.h
valgrind-3.7.0/include/vki/: vki-amd64-freebsd.h  (+4 more)
valgrind-3.7.0/lackey/: Makefile.in
valgrind-3.7.0/massif/: Makefile.in
valgrind-3.7.0/memcheck/: Makefile.in
valgrind-3.7.0/mpi/: Makefile.in
valgrind-3.7.0/none/: Makefile.in
valgrind-3.7.0/perf/: Makefile.in  tinycc.c  vg_perf
valgrind-3.7.0/taintgrind/: Makefile.am  Makefile.in  taintgrind.h  tnt_include.h  tnt_main.c  tnt_malloc_wrappers.c  tnt_strings.h  tnt_structs.h  tnt_syswrap.c  tnt_translate.c
valgrind-3.7.0/tests/: Makefile.in  filter_discards  malloc.h  os_test.c  sys_mman.h  vg_regtest
(+57 files in other folders)
